# paxil

./: Cargo.toml
src/: app_config.rs  app_runner.rs  image.rs  lib.rs  main.rs  shader.rs  texture.rs  utils.rs  vao.rs
src/shader/: fill.frag  fill.vert  test.frag  test.vert
