[package]
name = "paxil"
version = "0.1.0"
edition = "2021"

[dependencies]
glow = "=0.14.2"
thiserror = "1.0.63"
anyhow = "1.0.86"
log = "0.4"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.31.2", optional = true }
glutin-winit = { version = "0.4.2", optional = true}
winit = { version = "0.29.10", features = ["rwh_05"], optional = true }
raw-window-handle = { version = "0.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
wasm-bindgen = { version = "0.2" }

[features]
default = ["glutin_winit"]
glutin_winit = ["glutin", "glutin-winit", "winit", "raw-window-handle"]